# MarchingCubes-Project

./: CMakeLists.txt
resources/shaders/: march.frag  march.vert
src/: main.cpp
src/Core/: Application.cpp  Application.h  MarchingCubes.cpp  MarchingCubes.h  Mesh.cpp  Mesh.h  World.cpp  World.h
src/Utility/: Camera.cpp  Camera.h  Shader.cpp
